// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Abbr correctly renders a "Abbr" role 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
  border-radius: 2px;
  -webkit-text-decoration: underline dotted 2px;
  text-decoration: underline dotted 2px;
  text-underline-offset: 0.125em;
  text-decoration-color: #001E2B;
}

.emotion-0:hover a>*::after {
  height: 0;
}

.emotion-0:focus,
.emotion-0:focus-visible {
  outline-color: #0498EC;
  outline-offset: 3px;
  outline-style: solid;
  outline-width: 2px;
}

.emotion-0:hover,
.emotion-0:focus,
.emotion-0:focus-visible {
  text-decoration-color: #001E2B;
}

<span
    class="emotion-0"
    tabindex="0"
  >
    Display
  </span>
</DocumentFragment>
`;

exports[`File correctly renders a "file" role 1`] = `
<DocumentFragment>
  <code
    class="file docutils literal"
  >
    <span
      class="pre"
    >
      examples/treasury_yield/src/main/resources/yield_historical_in.json
    </span>
  </code>
</DocumentFragment>
`;

exports[`GUI Label correctly renders a "guilabel" role 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-style: normal;
  font-weight: 700;
}

<span
    class="guilabel emotion-0"
  >
    Yes
  </span>
</DocumentFragment>
`;
